added functionality to code, still not working

--- a/timer.html
+++ b/timer.html
@@ -13,7 +13,10 @@
     <div class="pb-5 row" id="timer-input">
         <input type="text" placeholder="How many minutes?" class="inputField col-2">
     </div>
-    <div class="row d-flex ">
+    <div class="row d-flex justify-content-center mb-3" >
+        <button class="col-1" id="myButton">start</button>
+    </div>
+    <div class="row d-flex">
         <div class="" id="timer-container">
             <h1 id="time"> 0:00</h1>
         </div>
