Continued to work on javascript

--- a/timer.html
+++ b/timer.html
@@ -11,7 +11,7 @@
         <h1 class="col" style="text-align: center">Timer Website</h1>
     </div>
     <div class="pb-5 row" id="timer-input">
-        <input type="text" placeholder="How many minutes?" class="inputField col-2">
+        <input type="text" placeholder=" How many minutes?" id="inputField col-2" style=" border: solid red 1px">
     </div>
     <div class="row d-flex justify-content-center mb-3" >
         <button class="col-1" id="myButton">start</button>
@@ -21,7 +21,6 @@
             <h1 id="time"> 0:00</h1>
         </div>
     </div>
-
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
 </body>
