--- a/timer.html
+++ b/timer.html
@@ -11,7 +11,7 @@
         <h1 class="col" style="text-align: center">Timer Website</h1>
     </div>
     <div class="pb-5 row" id="timer-input">
-        <input type="text" placeholder=" How many minutes?" id="inputField col-2" style=" border: solid red 1px">
+        <input  class="col-2" type="text" placeholder=" How many minutes?" id="inputField" style=" border: solid red 1px">
     </div>
     <div class="row d-flex justify-content-center mb-3" >
         <button class="col-1" id="myButton">start</button>
