additional styling to timer site

--- a/timer.html
+++ b/timer.html
@@ -8,13 +8,13 @@
 </head>
 <body class="container-fluid">
     <div class="row pb-5">
-        <h1 class="col header" style="text-align: center">Timer Website</h1>
+        <h1 class="col header" style="text-align: center">TIMER WEBSITE</h1>
     </div>
     <div class="pb-3 row" id="timer-input">
-        <input  class="col-lg-2 col-md-3 col-sm-3" type="text" placeholder=" How many minutes?" id="inputField">
+        <input  class="col-lg-2 col-md-2 col-sm-3" type="text" placeholder=" How many minutes?" id="inputField">
     </div>
     <div class="row d-flex justify-content-center mb-3" >
-        <button class="col-lg-1 col-md-2 col-sm-2" id="myButton">start</button>
+        <button class="col-lg-1 col-md-1 col-sm-2" id="myButton">start</button>
     </div>
     <div class="row d-flex">
         <div class="" id="timer-container">
