--- a/timer.html
+++ b/timer.html
@@ -16,9 +16,10 @@
     <div class="row d-flex justify-content-center mb-3" >
         <button class="col-lg-1 col-md-1 col-sm-2" id="myButton">start</button>
     </div>
+<!--Possible Row In Here-->
     <div class="row d-flex">
-        <div class="" id="timer-container">
-            <h1 id="time"> 0:00</h1>
+        <div class="row" id="timer-container">
+            <h1 class="col-12 d-flex justify-content-center align-self-center" id="time"> 0:00</h1>
         </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
