changed color of button

--- a/timer.html
+++ b/timer.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
         <div class="row" id="timer-container">
-            <h1 class="col-12 d-flex justify-content-center align-self-center" id="time"> 0:00</h1>
+            <h1 class="col-12 d-flex justify-content-center align-self-center text-center" id="time"> 0:00</h1>
         </div>
     </div>
 
